corrections after html validation

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
                     <!-- Start input group -->
                     <div class="input-group mb-3"> 
-                        <input id="citySearch" type="text" class="form-control" placeholder="City name..." class="input-group-append">
-                        <button id="searchBtn" class="btn btn-primary" type="button" id="button-addon2"><i class="far fa-search"></i></button>
+                        <input id="citySearch" type="text" placeholder="City name..." class="input-group-append">
+                        <button id="searchBtn" class="btn btn-primary" type="button"><i class="far fa-search"></i></button>
                     </div>
                     <div class="card"> 
                         <ul class="list-group list-group-flush list">
